v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__generated_openapi_for_role_user_1.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: generated_openapi
---
{
  "Ok": {
    "openapi": "3.1.0",
    "info": {
      "title": "Hasura JSONAPI (alpha)",
      "description": "REST API generated to match the JSON:API spec: https://jsonapi.org",
      "version": "0.1"
    },
    "paths": {
      "/v1/rest/default/Album": {
        "get": {
          "summary": "Fetch Album values",
          "parameters": [
            {
              "name": "page[limit]",
              "in": "query",
              "description": "Optional limit for fetched items",
              "schema": {
                "type": "integer"
              },
              "example": "5"
            },
            {
              "name": "page[offset]",
              "in": "query",
              "description": "Optional offset for fetched items",
              "schema": {
                "type": "integer"
              },
              "example": "10"
            },
            {
              "name": "fields[Album]",
              "in": "query",
              "description": "Optional list of fields from Album to include in response. If no fields are provided, all fields are returned",
              "schema": {
                "items": {
                  "enum": [
                    "AlbumId",
                    "Title"
                  ]
                }
              },
              "example": "AlbumId,Title"
            },
            {
              "name": "sort",
              "in": "query",
              "description": "Optional list of fields from Album to use in sorting response. 'field' will sort in ascending order, whilst '-field' will sort descending.",
              "schema": {
                "items": {
                  "enum": [
                    "AlbumId",
                    "-AlbumId",
                    "Title",
                    "-Title"
                  ]
                }
              },
              "example": "AlbumId,-Title"
            },
            {
              "name": "include",
              "in": "query",
              "description": "Optional list of relationships from Album to include in the response. Use dot-separated names to include nested relationships.",
              "schema": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "example": "Artist,Tracks"
            }
          ],
          "responses": {
            "200": {
              "description": "Successful Album response",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "object",
                    "required": [
                      "data"
                    ],
                    "properties": {
                      "data": {
                        "type": "array",
                        "items": {
                          "type": "object",
                          "required": [
                            "id",
                            "_type",
                            "attributes"
                          ],
                          "properties": {
                            "_type": {
                              "enum": [
                                "default_Album"
                              ]
                            },
                            "attributes": {
                              "type": "object",
                              "properties": {
                                "AlbumId": {
                                  "type": "object"
                                },
                                "Title": {
                                  "type": "object"
                                }
                              }
                            },
                            "id": {
                              "type": "string"
                            },
                            "relationships": {
                              "type": "object",
                              "properties": {
                                "Artist": {
                                  "type": "object",
                                  "required": [
                                    "data"
                                  ],
                                  "properties": {
                                    "data": {
                                      "type": "object",
                                      "required": [
                                        "id",
                                        "_type"
                                      ],
                                      "properties": {
                                        "_type": {
                                          "enum": [
                                            "default_Artist"
                                          ]
                                        },
                                        "id": {
                                          "type": "string"
                                        }
                                      }
                                    }
                                  }
                                },
                                "Tracks": {
                                  "type": "object",
                                  "required": [
                                    "data"
                                  ],
                                  "properties": {
                                    "data": {
                                      "type": "array",
                                      "items": {
                                        "type": "object",
                                        "required": [
                                          "id",
                                          "_type"
                                        ],
                                        "properties": {
                                          "_type": {
                                            "enum": [
                                              "default_Track"
                                            ]
                                          },
                                          "id": {
                                            "type": "string"
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      },
      "/v1/rest/default/Articles": {
        "get": {
          "summary": "Fetch Article values",
          "parameters": [
            {
              "name": "page[limit]",
              "in": "query",
              "description": "Optional limit for fetched items",
              "schema": {
                "type": "integer"
              },
              "example": "5"
            },
            {
              "name": "page[offset]",
              "in": "query",
              "description": "Optional offset for fetched items",
              "schema": {
                "type": "integer"
              },
              "example": "10"
            },
            {
              "name": "fields[Article]",
              "in": "query",
              "description": "Optional list of fields from Articles to include in response. If no fields are provided, all fields are returned",
              "schema": {
                "items": {
                  "enum": [
                    "article_id",
                    "author_id"
                  ]
                }
              },
              "example": "article_id,author_id"
            },
            {
              "name": "sort",
              "in": "query",
              "description": "Optional list of fields from Articles to use in sorting response. 'field' will sort in ascending order, whilst '-field' will sort descending.",
              "schema": {
                "items": {
                  "enum": [
                    "article_id",
                    "-article_id",
                    "author_id",
                    "-author_id"
                  ]
                }
              },
              "example": "article_id,-author_id"
            },
            {
              "name": "include",
              "in": "query",
              "description": "Optional list of relationships from Articles to include in the response. Use dot-separated names to include nested relationships.",
              "schema": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "example": "Author,AuthorFromCommand"
            }
          ],
          "responses": {
            "200": {
              "description": "Successful Articles response",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "object",
                    "required": [
                      "data"
                    ],
                    "properties": {
                      "data": {
                        "type": "array",
                        "items": {
                          "type": "object",
                          "required": [
                            "id",
                            "_type",
                            "attributes"
                          ],
                          "properties": {
                            "_type": {
                              "enum": [
                                "default_Article"
                              ]
                            },
                            "attributes": {
                              "type": "object",
                              "properties": {
                                "article_id": {
                                  "type": "integer"
                                },
                                "author_id": {
                                  "type": "object"
                                }
                              }
                            },
                            "id": {
                              "type": "string"
                            },
                            "relationships": {
                              "type": "object",
                              "properties": {
                                "Author": {
                                  "type": "object",
                                  "required": [
                                    "data"
                                  ],
                                  "properties": {
                                    "data": {
                                      "type": "object",
                                      "required": [
                                        "id",
                                        "_type"
                                      ],
                                      "properties": {
                                        "_type": {
                                          "enum": [
                                            "default_Author"
                                          ]
                                        },
                                        "id": {
                                          "type": "string"
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    },
    "components": {
      "schemas": {
        "default_Album": {
          "type": "object",
          "properties": {
            "AlbumId": {
              "type": "object"
            },
            "Title": {
              "type": "object"
            }
          }
        },
        "default_Article": {
          "type": "object",
          "properties": {
            "article_id": {
              "type": "integer"
            },
            "author_id": {
              "type": "object"
            }
          }
        },
        "default_commandArticle": {
          "type": "object",
          "properties": {
            "article_id": {
              "type": "integer"
            },
            "author_id": {
              "type": "integer"
            },
            "title": {
              "type": "string"
            }
          }
        },
        "default_commandAuthor": {
          "type": "object",
          "properties": {
            "first_name": {
              "type": "string"
            },
            "id": {
              "type": "integer"
            },
            "last_name": {
              "type": "string"
            }
          }
        }
      }
    }
  }
}
